--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://root:root@cluster0.glejirf.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET="somestringrighthere";
 PORT=3001
